tests/bad/return-type-doesnot-match.c
void main()
{
    int i = 1;
    return 0;
}
